--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install OpenTofu
         uses: opentofu/setup-opentofu@592200bd4b9bbf4772ace78f887668b1aee8f716 # v1.0.5
         with:
-          tofu-version: latest
+          tofu_version: latest
 
       - name: Run OpenTofu Plan for web stack
         working-directory: web_stack
