--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,8 @@ permissions:
   contents: read   # Required to checkout the repository
 
 jobs:
-  plan:
-    name: Run OpenTofu Plan
+  deploy:
+    name: Deploy Infrastructure
     runs-on: ubuntu-latest
 
     steps:
@@ -29,7 +29,7 @@ jobs:
       - name: Configure AWS Credentials via OIDC
         uses: aws-actions/configure-aws-credentials@ececac1a45f3b08a01d2dd070d28d111c5fe6722 # v4.1.0
         with:
-          role-to-assume: ${{ secrets.READ_ROLE_ARN }}
+          role-to-assume: ${{ secrets.WRITE_ROLE_ARN }}
           aws-region: ${{ vars.AWS_REGION }}
 
       - name: Install OpenTofu
