--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -33,4 +33,4 @@ jobs:
         working-directory: web_stack
         run: |
           tofu init
-          tofu plan
+          tofu plan -destroy
